--- a/HQproj-master/app/src/main/res/layout/activity_recycler_view.xml
+++ b/HQproj-master/app/src/main/res/layout/activity_recycler_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecyclerViewActivity">
+    tools:context=".Activity.RecyclerViewActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
