新增语言切换

--- a/HQproj-master/app/src/main/res/layout/activity_reg.xml
+++ b/HQproj-master/app/src/main/res/layout/activity_reg.xml
@@ -19,7 +19,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Register"
+                android:text="@string/PageRes_content"
                 android:textColor="#FFFFFF"
                 android:textSize="25sp"/>
         </LinearLayout>
@@ -40,7 +40,7 @@
                 android:layout_marginLeft="50dp"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
-                android:hint="用户名"/>
+                android:hint="@string/PageRes_userName"/>
 
             <View
                 android:layout_width="match_parent"
@@ -59,7 +59,7 @@
                 android:background="@null"
                 android:layout_gravity="center"
                 android:inputType="textPassword"
-                android:hint="密码"
+                android:hint="@string/PageRes_userPwd"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
                 android:layout_marginLeft="50dp"
@@ -82,7 +82,7 @@
                 android:background="@null"
                 android:layout_gravity="center"
                 android:inputType="textPassword"
-                android:hint="确认密码"
+                android:hint="@string/PageRes_userConfirmPwd"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
                 android:layout_marginLeft="50dp"
@@ -101,11 +101,12 @@
                 android:id="@+id/user_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="288dp"
+                android:layout_marginLeft="280dp"
                 android:background="@drawable/button_style"
-                android:text="注册" />
+                android:text="@string/PageRes_register" />
         </LinearLayout>
 
     </LinearLayout>
 
 </LinearLayout>
+
