--- a/HQproj-master/app/src/main/res/drawable/ic_next.xml
+++ b/HQproj-master/app/src/main/res/drawable/ic_next.xml
@@ -1,6 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="64dp"
+    android:height="64dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
   <path
