--- a/HQproj-master/app/src/main/res/drawable/ic_previous.xml
+++ b/HQproj-master/app/src/main/res/drawable/ic_previous.xml
@@ -1,4 +1,9 @@
-<vector android:height="64dp" android:viewportHeight="1024"
-    android:viewportWidth="1024" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#1296db" android:pathData="M341.4,512L896,896V128L341.4,512zM128,128h128v768H128z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="64dp"
+    android:height="64dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:fillColor="#1296db"
+        android:pathData="M341.4,512L896,896V128L341.4,512zM128,128h128v768H128z" />
 </vector>
