--- a/HQproj-master/app/src/main/res/layout/activity_login.xml
+++ b/HQproj-master/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hqexam.LoginActivity">
+    tools:context="com.example.hqproj.Activity.LoginActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Welcome"
+                android:text="@string/PageLogin_content"
                 android:textColor="#FFFFFF"
                 android:textSize="25sp"/>
         </LinearLayout>
@@ -36,13 +36,14 @@
                 android:id="@+id/et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="q"
                 android:background="@null"
                 android:layout_gravity="center"
                 android:layout_marginRight="50dp"
                 android:layout_marginLeft="50dp"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
-                android:hint="your username"/>
+                android:hint="@string/PageLogin_userName"/>
 
             <View
                 android:layout_width="match_parent"
@@ -61,7 +62,8 @@
                 android:background="@null"
                 android:layout_gravity="center"
                 android:inputType="textPassword"
-                android:hint="your password"
+                android:text="q"
+                android:hint="@string/PageLogin_userPwd"
                 android:textColor="#9F9FA0"
                 android:textColorHint="#9F9FA0"
                 android:layout_marginLeft="50dp"
@@ -79,14 +81,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Forget Password?"
+                android:text="@string/PageLogin_forget"
                 android:textColor="#DDDDDD"
                 android:textSize="15sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Tap Here"
+                android:text="@string/PageLogin_type"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"/>
         </LinearLayout>
@@ -104,7 +106,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_style"
-                android:text="Login" />
+                android:text="@string/PageLogin_login" />
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="wrap_content"
@@ -113,9 +115,10 @@
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/button_style"
                 android:layout_weight="1"
-                android:text="Register"/>
+                android:text="@string/PageLogin_register"/>
         </LinearLayout>
 
     </LinearLayout>
 
 </LinearLayout>
+
