--- a/HQproj-master/app/src/main/res/layout/music_page.xml
+++ b/HQproj-master/app/src/main/res/layout/music_page.xml
@@ -144,6 +144,17 @@
             android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/btn_loop"
+                android:layout_width="92dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:backgroundTint="@android:color/background_light"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_loop_list"
+                android:text="单曲循环"
+                android:textSize="15sp" />
+
+            <ImageButton
                 android:id="@+id/btn_stop"
                 android:layout_width="92dp"
                 android:layout_height="match_parent"
@@ -183,7 +194,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="@android:color/background_light"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_pause"
+                android:src="@drawable/ic_pause2"
                 android:text="暂停"
                 android:textSize="15sp" />
 
