--- a/HQproj-master/app/src/main/res/values/themes.xml
+++ b/HQproj-master/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HQproj" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.HQproj" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,10 +14,11 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="BottomDialog" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
+    <style name="ColorTranslucentTheme" parent="Theme.HQproj">
+        <item name="android:windowBackground">@drawable/bg3</item>
+    </style>
+    <style name="splashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/bg4</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
