--- a/HQproj-master/app/src/main/res/drawable/ic_pause.xml
+++ b/HQproj-master/app/src/main/res/drawable/ic_pause.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="64dp"
-    android:height="64dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-    <path
-        android:fillColor="#1296db"
-        android:pathData="M512,96C282.4,96 96,282.4 96,512s186.4,416 416,416 416,-186.4 416,-416S741.6,96 512,96zM428.8,699.2L428.8,324.8L678.4,512l-249.6,187.2z" />
+<vector android:height="64dp" android:viewportHeight="1024"
+    android:viewportWidth="1024" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#1296db" android:pathData="M795.37,474.03 L288.3,75.61c-14.53,-11.43 -34.32,-13.54 -50.95,-5.46 -16.63,8.08 -27.18,24.95 -27.18,43.43l0,796.83c0,18.49 10.55,35.35 27.18,43.43 6.7,3.26 13.92,4.86 21.1,4.86 10.62,0 21.17,-3.5 29.84,-10.32l507.07,-398.42c11.65,-9.16 18.46,-23.16 18.46,-37.98S807.03,483.19 795.37,474.03zM306.76,811.05 L306.76,212.95l380.61,299.05L306.76,811.05z"/>
 </vector>
